--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,9 @@
 <div class="logo-wrapper">
-  <span class="btn-dope alphabet-button">d</span>
-  <span class="btn-dope alphabet-button">o</span>
-  <span class="btn-dope alphabet-button">p</span>
-  <span class="btn-dope alphabet-button">e</span>
-  <span class="btn-dope alphabet-button">p</span>
-  <span class="btn-dope alphabet-button">o</span>
-  <span class="btn-dope alphabet-button">d</span>
+  <button class="btn-dope active logo-button">d</button>
+  <button class="btn-dope active logo-button">o</button>
+  <button class="btn-dope active logo-button">p</button>
+  <button class="btn-dope active logo-button">e</button>
+  <button class="btn-dope active logo-button">p</button>
+  <button class="btn-dope active logo-button">o</button>
+  <button class="btn-dope active logo-button">d</button>
 </div>
