--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -7,7 +7,7 @@ dopepod
 {% block center-stage %}
 <div class="col-12 results color-5-trans {{ results.view }}">
   <div class="row results-bar">
-    <div class="col-12 results-header">
+    <div class="col-12 results-header" data-q="{{ results.selected_q }}">
       {% if results.extra_options %}
         <button class="btn-dope results-back" onclick="window.history.back()">
           {% if request.is_ajax %}
@@ -125,21 +125,21 @@ dopepod
       <div class="collapse options-collapse" id="alphabet-collapse{{ results.drop }}">
         <div class="options-group">
           {% if results.selected_q|capfirst in results.alphabet %}
-            <a class="btn-dope options-button alphabet-button nix-button" href="{{ results.urls.q_url }}" id="alphabet-nix">
+            <a class="btn-dope options-button nix-button" href="{{ results.urls.q_url }}" id="alphabet-nix">
               <i class="fas fa-times-circle"></i>
             </a>
           {% endif %}
           {% for letter in results.alphabet %}
-          {% if letter == results.selected_q|capfirst %}
-          <a class="btn-dope active options-button alphabet-button" href="{{ results.urls.q_url }}&q={{ letter|urlencode }}" id="alphabet-{{ letter }}">
+            {% if letter == results.selected_q|capfirst %}
+            <a class="btn-dope options-button active" href="{{ results.urls.q_url }}">
+              {{ letter }}
+            </a>
             {% else %}
-            <a class="btn-dope options-button alphabet-button" href="{{ results.urls.q_url }}&q={{ letter|urlencode }}" id="alphabet-{{ letter }}">
-              {% endif %}
-                <span>
-                  {{ letter }}
-                </span>
+              <a class="btn-dope options-button" href="{{ results.urls.q_url }}&q={{ letter|urlencode }}">
+                {{ letter }}
               </a>
-            {% endfor %}
+            {% endif %}
+          {% endfor %}
         </div>
       </div>
     {% endif %}
@@ -152,7 +152,11 @@ dopepod
             </a>
           {% endif %}
           {% for genre in results.genres %}
-            {% if not results.selected_genre == genre %}
+            {% if results.selected_genre == genre %}
+            <a class="btn-dope options-button active" href="{{ results.urls.genre_url }}">
+              {{ genre }}
+            </a>
+            {% else %}
               <a class="btn-dope options-button" href="{{ results.urls.genre_url }}&genre={{ genre.url_format }}">
                 {{ genre }}
               </a>
@@ -170,7 +174,11 @@ dopepod
             </a>
           {% endif %}
           {% for language in results.languages %}
-            {% if not results.selected_language == language %}
+            {% if results.selected_language == language %}
+              <a class="btn-dope options-button active" href="{{ results.urls.language_url }}">
+                {{ language }}
+              </a>
+            {% else %}
               <a class="btn-dope options-button" href="{{ results.urls.language_url }}&language={{ language.url_format }}">
                 {{ language }}
               </a>
@@ -183,8 +191,8 @@ dopepod
       {% include 'pagination.html' %}
     {% endif %}
 
-    <div class="col-12 results-content">
-      {% if results.podcasts or results.episodes %}
+    {% if results.podcasts or results.episodes %}
+      <div class="col-12 results-content">
         {% if results.view == 'grid' or results.view == 'list' %}
           {% include 'search.html' %}
         {% elif results.view == 'charts' %}
@@ -196,8 +204,8 @@ dopepod
         {% elif results.view == 'last_played'%}
           {% include 'last_played.html' %}
         {% endif %}
-      {% endif %}
-    </div>
+      </div>
+    {% endif %}
 
     {% if results.pagination %}
       {% include 'pagination.html' %}
