--- a/index/templates/circle-loading.html
+++ b/index/templates/circle-loading.html
@@ -1,4 +1,4 @@
-<div class="circle-loading noselect">
+<div class="circle-loading">
   <span class="char char-1">d</span>
   <span class="char char-2">o</span>
   <span class="char char-3">p</span>
