--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -8,11 +8,8 @@ Listen to episodes of {{ podcast.title }} on dopepod
 <div class="col-12 results color-5-trans">
   <div class="row" id="showpod">
     <div class="col-12 col-lg-4" id="showpod-l">
-      <!-- BADGE -->
-      <div class="showpod-image">
-        <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}360x360bb.jpg"
-        onerror="this.src='http://{{ podcast.artworkUrl }}360x360bb.jpg'" />
-      </div>
+      <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}360x360bb.jpg"
+      onerror="this.src='http://{{ podcast.artworkUrl }}360x360bb.jpg'" />
     </div>
     <div class="col-12 col-lg-5" id="showpod-c" data-podid="{{ podcast.podid }}">
       <button class="btn-dope results-back" onclick="window.history.back()">
@@ -102,9 +99,10 @@ Listen to episodes of {{ podcast.title }} on dopepod
       <div class="showpod-options">
         <a class="btn-dope episodes-button toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
           {% if request.is_ajax %}
-            {% include 'loading.html' %}
+            {% include 'button-loading.html' %}
+          {% else %}
+            Episodes
           {% endif %}
-          Episodes
         </a>
         <a class="btn-dope reviews-button toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
           Reviews
