--- a/podcasts/templates/results_base.html
+++ b/podcasts/templates/results_base.html
@@ -193,7 +193,7 @@ dopepod
           {% include 'subscriptions.html' %}
         {% elif results.view == 'playlist'%}
           {% include 'episodes.html' %}
-        {% elif results.view == 'last_played'%}
+        {% elif results.view == 'last-played'%}
           {% include 'last_played.html' %}
         {% endif %}
       </div>
