--- a/index/static/style.css
+++ b/index/static/style.css
@@ -22,7 +22,7 @@ a:hover {
 #cookie-banner {
   color: rgb(46, 46, 46);
   text-align: center;
-  padding: 10px;
+  padding: 5px 0;
 }
 #cookie-banner h1 {
   display: inline-block;
@@ -45,11 +45,12 @@ a:hover {
 /* BUTTONS */
 .btn-dope {
   position: relative;
-  font-size: 14px!important;
+  font-size: 16px!important;
   color: inherit;
   border: 2px solid rgba(0, 191, 165, 1);
   min-width: 30px;
-  padding: 4px 8px;
+  height: 33px;
+  padding: 2px 8px;
   cursor: pointer;
   font-weight: 600;
   background: inherit;
@@ -73,7 +74,7 @@ button.btn-dope {
   color: #fff;
   background: rgba(0, 191, 165, 1);
 }
-.btn-dope:hover, .btn-dope:focus {
+.btn-dope:focus {
   color: #fff;
   outline: none;
   background: rgba(0, 191, 165, 1);
@@ -164,7 +165,7 @@ button.btn-dope {
   margin-bottom: 4px;
 }
 .provider-button {
-  width: 100px;
+  width: 120px;
 }
 .nix-button {
   margin-right: auto;
@@ -339,7 +340,7 @@ button.btn-dope {
 }
 .social-button {
   display: inline;
-  padding: .25rem .5rem;
+  padding: 2px 8px;   /* same as btn-dope */
 }
 .social-icon {
   background: rgba(0, 191, 165, 1);
@@ -935,7 +936,7 @@ button.btn-dope {
 }
 .browse-results-list {
   font-size: 14px;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   padding-left: 0;
   list-style: none;
 }
@@ -943,7 +944,7 @@ button.btn-dope {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  margin-top: 10px;
+  padding: 10px 0;
 }
 .browse-results-list li a {
   color: unset;
