--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -2,8 +2,8 @@
   <button class="btn-dope active logo-button">d</button>
   <button class="btn-dope active logo-button">o</button>
   <button class="btn-dope active logo-button">p</button>
-  <button class="btn-dope active logo-button">e</button>
-  <button class="btn-dope active logo-button">p</button>
-  <button class="btn-dope active logo-button">o</button>
-  <button class="btn-dope active logo-button">d</button>
+  <button class="btn-dope active logo-button spin">e</button>
+  <button class="btn-dope active logo-button spin">p</button>
+  <button class="btn-dope active logo-button spin">o</button>
+  <button class="btn-dope active logo-button spin">d</button>
 </div>
