--- a/index/templates/splash.html
+++ b/index/templates/splash.html
@@ -21,7 +21,7 @@ dopepod
       {% if view == 'signup' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
           <span class="site-description">
-            dopepod is a free, mobile-friendly podcast web app that
+            is a free, mobile-friendly podcast web app that
             scours the internet for fresh podcasts so you don't have to.
           </span>
           <br />
@@ -105,7 +105,7 @@ dopepod
       {% elif view == 'login' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
           <span class="site-description">
-            dopepod is a free, mobile-friendly podcast web app that
+            is a free, mobile-friendly podcast web app that
             scours the internet for fresh podcasts so you don't have to.
           </span>
           <br />
@@ -189,7 +189,7 @@ dopepod
       {% elif view == 'password' %}
         <div class="tab-pane fade" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
           <span class="site-description">
-            dopepod is a free, mobile-friendly podcast web app that
+            is a free, mobile-friendly podcast web app that
             scours the internet for fresh podcasts so you don't have to.
           </span>
           <br />
@@ -273,7 +273,7 @@ dopepod
       {% else %}
         <div class="tab-pane fade show active" id="tabs-splash" role="tabpanel" aria-labelledby="splash-tab">
           <span class="site-description">
-            dopepod is a free, mobile-friendly podcast web app that
+            is a free, mobile-friendly podcast web app that
             scours the internet for fresh podcasts so you don't have to.
           </span>
           <br />
