--- a/index/static/style.css
+++ b/index/static/style.css
@@ -362,9 +362,9 @@ button.btn-dope {
   display: inline-block;
   margin: auto;
 }
-.logo-wrapper:hover .spin {
+/* .logo-wrapper:hover .spin {
   color: #000;
-}
+} */
 
 /* DASHBOARD */
 #dashboard {
