--- a/index/templates/logo.html
+++ b/index/templates/logo.html
@@ -1,9 +1,9 @@
 <div class="logo-wrapper">
-  <button class="btn-dope active logo-button">d</button>
-  <button class="btn-dope active logo-button">o</button>
-  <button class="btn-dope active logo-button">p</button>
-  <button class="btn-dope active logo-button spin">e</button>
-  <button class="btn-dope active logo-button spin">p</button>
-  <button class="btn-dope active logo-button spin">o</button>
-  <button class="btn-dope active logo-button spin">d</button>
+  <button class="btn-dope active">d</button>
+  <button class="btn-dope active">o</button>
+  <button class="btn-dope active">p</button>
+  <button class="btn-dope active spin">e</button>
+  <button class="btn-dope active spin">p</button>
+  <button class="btn-dope active spin">o</button>
+  <button class="btn-dope active spin">d</button>
 </div>
