--- a/index/static/style.css
+++ b/index/static/style.css
@@ -895,6 +895,11 @@ button.btn-dope {
   -moz-transition: all .25s ease-in-out;
   -webkit-transition: all .25s ease-in-out;
   transform: rotate(-180deg);
+  background: rgba(0, 191, 165, 1);
+  color: rgb(255, 255, 255);
+  -webkit-box-shadow: rgba(0,0,0,.8) 0 0px 5px;
+  -moz-box-shadow: rgba(0,0,0,.8) 0 0px 5px;
+  box-shadow: rgba(0,0,0,.8) 0 0px 5px;
 }
 
 /* SEARCH RESULTS */
